<resources>
    <string name="app_name">DrOwn</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <!--<string name="nav_header_title">Android Studio</string>-->
    <!--<string name="nav_header_subtitle">android.studio@android.com</string>-->
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_service_items_header">Service</string>
    <string name="nav_item_drones">Drones</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_api_url">Server URL</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_change_api_url">Change server URL</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">Password is required</string>
    <string name="error_incorrect_password">Check your password and internet connection</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_api_url">Server URL must be a valid URL</string>
    <string name="message_api_url_changed">Server URL was changed!</string>
    <string name="message_api_url_changed_button">OK</string>
    <!--<string name="permission_rationale">"Contacts permissions are needed for providing email-->
    <!--completions."-->
    <!--</string>-->
    <string name="drone_status_UNAUTHORIZED">Unactivated</string>
    <string name="drone_status_OFFLINE">Offline</string>
    <string name="drone_status_IDLE">Idle</string>
    <string name="drone_status_WORKING">Working</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="drone_device_id">Machine ID</string>
    <string name="drone_status">Status</string>
    <string name="drone_base_longitude">Home Longitude</string>
    <string name="drone_base_latitude">Home Latitude</string>
    <string name="drone_battery_power">Battery Power</string>
    <string name="drone_engine_power">Engine Power</string>
    <string name="drone_load_capacity">Load Capacity</string>
    <string name="drone_can_carry_liquids">Can Carry Liquids</string>
    <string name="drone_cannot_carry_liquids">Cannot Carry Liquids</string>

    <string name="action_drone_create">Create</string>
    <string name="action_drone_details_orders">Tasks</string>
    <string name="action_drone_details_telemetry">Telemetry</string>
    <string name="action_drone_details_delete">Delete</string>
    <string name="prompt_drone_delete">Delete drone?</string>
    <string name="prompt_drone_delete_yes">Yes</string>
    <string name="prompt_drone_delete_no">No</string>

    <!-- TODO: Remove or change this placeholder text -->
    <!--<string name="hello_blank_fragment">Hello blank fragment</string>-->

    <string name="telemetry_status_WAITING">Waiting</string>
    <string name="telemetry_status_TAKING_CARGO">Taking cargo</string>
    <string name="telemetry_status_RELEASING_CARGO">Releasing cargo</string>
    <string name="telemetry_status_MOVING">Moving</string>

    <string name="order_status_STARTED">In process</string>
    <string name="order_status_ERROR">Error</string>
    <string name="order_status_ENQUEUED">Enqueued</string>
    <string name="order_status_SKIPPED">Skipped</string>
    <string name="order_status_DONE">Done</string>
    <string name="order_status_TOO_FAR_GEO">Too far</string>
    <string name="order_status_HAS_LOAD">Already loaded error</string>
    <string name="order_status_HAS_NO_LOAD">Not loaded error</string>

    <string name="order_action_STOP_AND_WAIT">Stop and wait</string>
    <string name="order_action_MOVE_TO_LOCATION">Move to location</string>
    <string name="order_action_TAKE_CARGO">Take cargo</string>
    <string name="order_action_RELEASE_CARGO">Release cargo</string>

    <string name="action_order_create">Send new</string>
    <string name="get_location_error">Failed to get location</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="latitude_invalid">Latitude must be a number between -90 and 90</string>
    <string name="longitude_invalid">Longitude must be a number between -180 and 180</string>
    <string name="network_error">Error occurred, try again</string>
    <string name="action_get_location">Get current location</string>
    <string name="action_order_create_submit">Send order</string>

</resources>
