<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderCreate">

    <Spinner
        android:id="@+id/order_create_action"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/order_action_coordinates"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".LoginActivity">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/order_create_latitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/latitude"
                android:imeActionId="6"
                android:imeActionLabel="@string/latitude"
                android:imeOptions="actionUnspecified"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/order_create_longitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/longitude"
                android:imeActionId="6"
                android:imeActionLabel="@string/longitude"
                android:imeOptions="actionUnspecified"
                android:inputType="numberDecimal"
                android:maxLines="1"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/order_create_get_coordinates"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/action_get_location"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/order_create_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/action_order_create_submit"
        android:textStyle="bold" />

</LinearLayout>